force-app/main/default/objects/Brackets_Tournament__c/Brackets_Tournament__c.object-meta.xml
<CustomObject>
    <label>Tournament</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tournaments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>