force-app/main/default/objects/Brackets_Tournament__c/fields/Allow_Update__c.field-meta.xml
<CustomField>
    <fullName>Allow_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Update</label>
    <type>Checkbox</type>
</CustomField>