force-app/main/default/objects/Brackets_Tournament__c/fields/CronTrigger__c.field-meta.xml
<CustomField>
    <fullName>CronTrigger__c</fullName>
    <description>Save CronTrigger Referenced ID</description>
    <label>CronTrigger</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>