force-app/main/default/objects/Brackets_Tournament__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <inlineHelpText
    >Deadline for the &quot;Full tournament&quot; type pools.</inlineHelpText>
    <label>Deadline</label>
    <type>DateTime</type>
</CustomField>