force-app/main/default/objects/Brackets_Tournament__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>General description of the tournament.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>