force-app/main/default/objects/Brackets_Tournament__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <inlineHelpText
    >Tournament end date, calculated with the date of the last match played</inlineHelpText>
    <label>End Date</label>
    <summarizedField>Brackets_Round__c.End__c</summarizedField>
    <summaryForeignKey
    >Brackets_Round__c.Brackets_Tournament__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>