force-app/main/default/objects/Brackets_Tournament__c/fields/isChild__c.field-meta.xml
<CustomField>
    <fullName>isChild__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabled if a tournament is imported from a URL</description>
    <label>isChild</label>
    <type>Checkbox</type>
</CustomField>