force-app/main/default/objects/Brackets_Tournament__c/fields/MaxRoundNumber__c.field-meta.xml
<CustomField>
    <fullName>MaxRoundNumber__c</fullName>
    <label>MaxRoundNumber</label>
    <summarizedField>Brackets_Round__c.RoundNumber__c</summarizedField>
    <summaryForeignKey
    >Brackets_Round__c.Brackets_Tournament__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>