force-app/main/default/objects/Brackets_Tournament__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <inlineHelpText
    >Tournament start date, calculated with the date of the first match played</inlineHelpText>
    <label>Start Date</label>
    <summarizedField>Brackets_Round__c.Start__c</summarizedField>
    <summaryForeignKey
    >Brackets_Round__c.Brackets_Tournament__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>