force-app/main/default/objects/Brackets_Tournament__c/fields/TeamCount__c.field-meta.xml
<CustomField>
    <fullName>TeamCount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText
    >Number of teams that participate in the tournament</inlineHelpText>
    <label>Team Count</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>