force-app/main/default/objects/Brackets_Tournament__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Which type of tournament this is?

Types supported include: &quot;NFL Playoff&quot; with fixed 12 teams and &quot;Standard&quot; a single elimination type of tournament.</inlineHelpText>
    <label>Type</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NFL Playoff</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>