force-app/main/default/objects/Brackets_Tournament__c/fields/Update_Source__c.field-meta.xml
<CustomField>
    <fullName>Update_Source__c</fullName>
    <label>Update Source</label>
    <type>Url</type>
</CustomField>