force-app/main/default/objects/Brackets_Tournament__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>