force-app/main/default/objects/Brackets_Tournament__c/validationRules/DeadlineBeforeStart.validationRule-meta.xml
<ValidationRule>
    <fullName>DeadlineBeforeStart</fullName>
    <active>true</active>
    <description
    >Tournament deadline must be set before the first match</description>
    <errorConditionFormula
    >NOT(ISNULL(Deadline__c)) &amp;&amp; NOT(ISNULL( Start__c)) &amp;&amp; Deadline__c &gt; Start__c</errorConditionFormula>
    <errorMessage
    >The tournament deadline must be before the first game.</errorMessage>
</ValidationRule>