force-app/main/default/objects/Brackets_Tournament__c/validationRules/TeamCountGraterThanTwo.validationRule-meta.xml
<ValidationRule>
    <fullName>TeamCountGraterThanTwo</fullName>
    <active>true</active>
    <description>TeamCount must be greater than 2</description>
    <errorConditionFormula
    >ISPICKVAL( Type__c, &quot;Standard&quot; ) &amp;&amp; ( TeamCount__c &lt; 2 )</errorConditionFormula>
    <errorMessage>The tournament must have at least 2 teams</errorMessage>
</ValidationRule>