force-app/main/default/objects/Brackets_Tournament__c/validationRules/TypeNotUpdateable.validationRule-meta.xml
<ValidationRule>
    <fullName>TypeNotUpdateable</fullName>
    <active>true</active>
    <errorConditionFormula
    >NOT(ISNEW())  &amp;&amp;  ISCHANGED(  Type__c )</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>This field can&apos;t be updated.</errorMessage>
</ValidationRule>