force-app/main/default/objects/Brackets_Tournament__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Allow_Update__c</columns>
    <columns>isChild__c</columns>
    <columns>Type__c</columns>
    <columns>Update_Source__c</columns>
    <columns>Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>